--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.claraberriel.weathermvvm"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -40,45 +40,54 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    //cardView and recyclerview
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
-    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
-
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    //If you use Glide’s annotations on classes implemented in Kotlin,
+    // you need to include a kapt dependency on Glide’s annotation processor
+    // instead of a annotationProcessor dependency:
+    //kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     //Chucker
     //debugImplementation "com.github.ChuckerTeam.Chucker:library:3.0.1"
     releaseImplementation "com.github.ChuckerTeam.Chucker:library-no-op:3.0.1"
 
-    // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
 
-    // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1-native-mt'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1-native-mt'
+    //clean...
+    def lib = rootProject.ext.generalDependencies
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation lib.coreKtx
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation lib.constraintlayout
+
+    implementation project(path: ':data')
+    implementation project(path: ':domain')
+
+    testImplementation lib.junit_version
+    androidTestImplementation lib.espresso_core_version
+
+    //CardView and Recyclerview
+    implementation lib.cardview
+    implementation lib.recyclerview
+    implementation lib.recyclerview_selection
+
+    //Retrofit
+    implementation lib.retrofit2
+    implementation lib.retrofitComverterGson
+    implementation lib.okhttp3
+
+    //Coroutines
+    implementation lib.coroutinesCore
+    implementation lib.coroutinesAndroid
 
     // Coroutine Lifecycle Scopes
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
-    implementation "androidx.activity:activity-ktx:1.3.1"
+    implementation lib.lifecycleViewmodel
+    implementation lib.lifecycleRuntime
+    implementation lib.activity_ktx
 
-    //dagger-hilt
-    implementation 'com.google.dagger:hilt-android:2.38.1'
-    kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    //Dagger-Hilt
+    implementation lib.dagger_hilt
+    kapt lib.dagger_hiltcompiler
+    implementation lib.hiltlifecycle
+    kapt lib.hilt_compiler
 }
