--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,6 @@ dependencies {
     releaseImplementation "com.github.ChuckerTeam.Chucker:library-no-op:3.0.1"
 
 
-    //clean...
     def lib = rootProject.ext.generalDependencies
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation lib.coreKtx
@@ -90,4 +89,12 @@ dependencies {
     kapt lib.dagger_hiltcompiler
     implementation lib.hiltlifecycle
     kapt lib.hilt_compiler
+
+    //Tests
+    testImplementation 'org.mockito:mockito-core:3.9.0'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1"
 }
