--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,6 @@ dependencies {
     //kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     //Chucker
-    //debugImplementation "com.github.ChuckerTeam.Chucker:library:3.0.1"
     releaseImplementation "com.github.ChuckerTeam.Chucker:library-no-op:3.0.1"
 
 
@@ -94,7 +93,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.9.0'
     testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
+    testImplementation lib.coroutinesCore
+    testImplementation lib.coroutinesAndroid
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1"
 }
